# bpfilter

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Kbuild  README.md  bpfilter.h  bpfilter_kern.c  bpfilter_umh_blob.S  codecov.yml  codegen.c  codegen.h  context.c  context.h  derivation.nix  filter-table.c  filter-table.h  flake.nix  logger.c  logger.h  main.c  map-common.c  map-common.h  match.c  match.h  msgfmt.h  pyproject.toml  rule.c  rule.h  sockopt.c  sockopt.h  table.c  table.h  target.c  target.h  xt_udp.c
cli/: CMakeLists.txt  main.c
cli/parser/: lexer.l  parser.y
doc/: CMakeLists.txt  Doxyfile.in  benchmarks.html.template  benchreport  build.rst  conf.py.in  covreport  generate_matcher_hook_compat.py  index.rst  iptables.md  iptables.rst  overview.rst  reference.rst  sources.rst  todo.rst  usage.rst
doc/_static/: benchmarks.html
doc/_templates/: page.html
doc/developers/: build.rst  contributing.rst  generation.rst  memory.rst  packets_processing.rst  style.rst  tests.rst
doc/developers/fronts/: index.rst  nftables.rst
doc/developers/modules/: bpfilter.rst  core.rst  daemon.rst  helpers.rst  index.rst  lib.rst
doc/usage/: bfcli.rst  daemon.rst  index.rst  iptables.rst  nftables.rst
doc/usage/_generated/: bfcli_matcher_hook_compatibility.rst
lib/: CMakeLists.txt
lib/include/: bpfilter.h
lib/include/bpfilter/: bpfilter.h
lib/src/: generic.c  ipt.c  nft.c
src/: CMakeLists.txt  daemon.c  main.c  opts.c  opts.h  version.h.in
src/bfcli/: CMakeLists.txt  chain.c  chain.h  dump.c  dump.h  helper.c  helper.h  lexer.l  main.c  opts.c  opts.h  parser.y  print.c  print.h  ruleset.c  ruleset.h
src/bpfilter/: CMakeLists.txt  bpfilter.service.in  context.c  context.h  ctx.c  ctx.h  main.c  opts.c  opts.h  xlate.c
src/bpfilter/bpf/: flow_hash.bpf.c  log.bpf.c  parse_ipv6_eh.bpf.c  parse_ipv6_nh.bpf.c  pkt_log.bpf.c  ratelimit.bpf.c  update_counters.bpf.c
src/bpfilter/cgen/: cgen.c  cgen.h  cgroup.c  cgroup.h  cgroup_skb.c  cgroup_sock_addr.c  cgroup_sock_addr.h  codegen.c  codegen.h  dump.c  dump.h  elfstub.c  elfstub.h  fixup.c  fixup.h  handle.c  handle.h  jmp.c  jmp.h  nf.c  nf.h  packet.c  printer.c  printer.h  program.c  program.h  runtime.h  stub.c  stub.h  swich.c  swich.h  tc.c  tc.h  xdp.c
src/bpfilter/xlate/: cli.c  front.c  front.h
src/cli/: cli.c  lexer.l  parser.y
src/core/: CMakeLists.txt  bpf.c  bpf.h  bpf_types.h  btf.c  btf.h  chain.c  chain.h  context.c  context.h  counter.c  counter.h  dump.c  dump.h  dynbuf.c  dynbuf.h  flavor.c  flavor.h  front.c  helper.c  helper.h  hook.c  hook.h  if.c  if.h  io.c  io.h  list.c  list.h  logger.c  logger.h  map.c  map.h  marsh.c  marsh.h  match.c  match.h  matcher.c  matcher.h  nf.c  (+23 more)
src/daemon/: context.c  daemon.c
src/daemon/cgen/: codegen.c  dump.c  fixup.c  jmp.c  jmp.h  nf.c  nf.h  printer.c  printer.h  program.c  program.h  stub.c  stub.h  swich.c  swich.h  tc.c  tc.h  xdp.c
src/daemon/xlate/: cli.c  front.c
src/generator/: codegen.c  codegen.h  dump.c  dump.h  fixup.c  fixup.h  jmp.c  jmp.h  nf.c  nf.h  print.c  print.h  printer.c  printer.h  program.c  program.h  progtype.c  progtype.h  reg.h  set.c  set.h  stub.c  stub.h  swich.c  swich.h  tc.c  tc.h  xdp.c  xdp.h
src/generator/matcher/: ip.c  ip.h  ip4.c  ip4.h  ip6.c  meta.c  tcp.c  tcp.h  udp.c  udp.h
src/lib/: bpfilter.h  generic.c  generic.h  ipt.c  nft.c
src/libbpfilter/: CMakeLists.txt  bpf.c  bpfilter.h  bpfilter.pc.in  btf.c  chain.c  cli.c  counter.c  ctx.c  dump.c  dynbuf.c  flavor.c  front.c  generic.c  generic.h  hashset.c  helper.c  hook.c  if.c  io.c  ipt.c  list.c  logger.c  matcher.c  nft.c  ns.c  pack.c  ratelimit.c  request.c  response.c  rule.c  set.c  vector.c  verdict.c  version.c
src/libbpfilter/bpf/: flow_hash.bpf.c  pkt_log.bpf.c  ratelimit.bpf.c  sock_addr_log.bpf.c  update_counters.bpf.c
src/libbpfilter/cgen/: cgen.c  cgen.h  cgroup_skb.c  cgroup_skb.h  cgroup_sock_addr.c  cgroup_sock_addr.h  dump.c  elfstub.c  fixup.c  fixup.h  handle.c  handle.h  jmp.c  jmp.h  nf.c  packet.c  packet.h  printer.c  printer.h  program.c  program.h  runtime.h  stub.c  stub.h  swich.c  swich.h  tc.c  tc.h  xdp.c  xdp.h  xlate.c
src/libbpfilter/core/: ctx.h  hashset.c  list.c  lock.c  lock.h  vector.c
src/shared/: front.h  generic.c  generic.h  helper.h  ipt.h  request.h  response.c  response.h
src/xlate/: cli.c  front.c  front.h  frontend.c  frontend.h
src/xlate/ipt/: dump.c  dump.h  helpers.h  ipt.c  ipt.h
tests/: CMakeLists.txt  coverage.css  rules.bpfilter
tests/benchmark/: CMakeLists.txt  asroot  benchmark.cpp  benchmark.hpp  main.cpp
tests/benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.hpp  bfbencher  main.cpp  results.html.j2  summary.html.j2
tests/bpf/: CMakeLists.txt  cgroup_skb_ingress.bpf.c  cgroup_skb_ingress.c  cgroup_skb_ingress.h  xdp_ipfilter.bpf.c  xdp_ipfilter.c  xdp_printk.bpf.c  xdp_printk.c
tests/check/: CMakeLists.txt  iwyu.mapping
tests/e2e/: CMakeLists.txt  cli.sh  daemon.sh  e2e.c  e2e.h  e2e_test_util.sh  genpkts.py  main.c  netns.sh  opts.c  opts.h  setuserns.c
tests/end_to_end/: CMakeLists.txt  end_to_end.py  global.h  ipt.c  raw.c
tests/functional/: CMakeLists.txt
tests/fuzz/: CMakeLists.txt  fuzz_parser.c  keywords.dict
tests/harness/: CMakeLists.txt  Chain.hpp  Daemon.cpp  Daemon.hpp  FileDescriptor.cpp  FileDescriptor.hpp  Matcher.hpp  Packet.cpp  Packet.hpp  Rule.hpp  Set.hpp  daemon.c  daemon.h  fake.c  fake.h  filters.c  filters.h  mock.c  mock.h  process.c  process.h  prog.c  prog.h  sym.c  sym.h  test.c  test.cpp  test.h  test.hpp
tests/integration/: CMakeLists.txt  pedantic_c.sh  pedantic_cpp.sh
tests/pedantic/: CMakeLists.txt  pedantic.c  pedantic.cpp
tests/unit/: CMakeLists.txt  assert_override.h  codegen.cc  context.cc  fake.c  fake.h  list.cc  main.c  map.cc  mock.c  mock.h  progtype.cc  test.c  test.h
tools/benchmarks/: CMakeLists.txt  Chain.hpp  Matcher.hpp  Rule.hpp  Set.hpp  benchmark.cpp  benchmark.hpp  benchreport  bfbencher  main.cpp  results.html.j2  summary.html.j2
(+603 files in other folders)
